force-app/main/default/objects/copado_envmgr__EnvironmentOrg__c/copado_envmgr__EnvironmentOrg__c.object-meta.xml
<CustomObject>
    <description>Organizations created per Environment Definition</description>
    <label>Environment Org</label>
    <nameField>
        <label>Environment Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Orgs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>