force-app/main/default/objects/copado_envmgr__EnvironmentOrg__c/fields/copado_envmgr__Environment__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Environment Orgs</relationshipLabel>
    <relationshipName>Environment_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>