force-app/main/default/objects/copado_envmgr__EnvironmentOrg__c/fields/copado_envmgr__EnvironmentDefinition__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__EnvironmentDefinition__c</fullName>
    <label>Environment Definition</label>
    <referenceTo>copado_envmgr__EnvironmentDefinition__c</referenceTo>
    <relationshipLabel>Environment Orgs</relationshipLabel>
    <relationshipName>Environment_Orgs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>