force-app/main/default/objects/copado_envmgr__EnvironmentOrg__c/fields/copado_envmgr__OrgId__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__OrgId__c</fullName>
    <description>Salesforce Org Id, used as an External ID that must match copado__Environment__r.copado__Org_ID__c</description>
    <externalId>true</externalId>
    <inlineHelpText>Salesforce Org Id, used as an External ID that must match copado__Environment__r.copado__Org_ID__c</inlineHelpText>
    <label>OrgId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>