force-app/main/default/objects/copado_envmgr__EnvironmentOrg__c/fields/copado_envmgr__Status__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Creating</fullName>
                <default>true</default>
                <label>Creating</label>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>In Use</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>