force-app/main/default/objects/copado_envmgr__EnvironmentOrg__c/listViews/copado_envmgr__All.listView-meta.xml
<ListView>
    <fullName>copado_envmgr__All</fullName>
    <columns>NAME</columns>
    <columns>copado_envmgr__Status__c</columns>
    <columns>copado_envmgr__Environment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>copado_envmgr__ExpirationDate__c</columns>
    <columns>copado_envmgr__EnvironmentDefinition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>